// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interpreter default scripts binary-expressions.src 1`] = `
CustomNumber {
  "value": 1.5,
}
`;

exports[`interpreter default scripts binary-expressions.src 2`] = `
CustomNumber {
  "value": 600,
}
`;

exports[`interpreter default scripts binary-expressions.src 3`] = `
CustomNumber {
  "value": 10,
}
`;

exports[`interpreter default scripts binary-expressions.src 4`] = `
CustomNumber {
  "value": 50,
}
`;

exports[`interpreter default scripts binary-expressions.src 5`] = `
CustomNumber {
  "value": 31457280,
}
`;

exports[`interpreter default scripts binary-expressions.src 6`] = `
CustomNumber {
  "value": 0,
}
`;

exports[`interpreter default scripts binary-expressions.src 7`] = `
CustomNumber {
  "value": 0,
}
`;

exports[`interpreter default scripts binary-expressions.src 8`] = `
CustomNumber {
  "value": 30,
}
`;

exports[`interpreter default scripts binary-expressions.src 9`] = `
CustomNumber {
  "value": 20,
}
`;

exports[`interpreter default scripts binary-expressions.src 10`] = `
CustomNumber {
  "value": 10,
}
`;

exports[`interpreter default scripts binary-expressions.src 11`] = `20`;

exports[`interpreter default scripts binary-expressions.src 12`] = `true`;

exports[`interpreter default scripts list.src 1`] = `
CustomString {
  "value": "bar",
}
`;

exports[`interpreter default scripts list.src 2`] = `
CustomString {
  "value": "bar",
}
`;

exports[`interpreter default scripts list.src 3`] = `
CustomString {
  "value": "foo",
}
`;

exports[`interpreter default scripts list.src 4`] = `
CustomString {
  "value": "changed",
}
`;

exports[`interpreter default scripts negation.src 1`] = `
CustomNumber {
  "value": 2,
}
`;

exports[`interpreter default scripts negation.src 2`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomNumber {
      "value": -1,
    },
    CustomNumber {
      "value": 2,
    },
    CustomNumber {
      "value": 0,
    },
  ],
}
`;

exports[`interpreter default scripts obj-init.src 1`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomString {
      "value": "123",
    },
    CustomString {
      "value": "123",
    },
    CustomString {
      "value": "foo",
    },
  ],
}
`;

exports[`interpreter default scripts obj-init.src 2`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomMap {
      "isInstance": false,
      "value": Map {
        "another" => CustomString {
          "value": "123",
        },
      },
    },
    CustomString {
      "value": "123",
    },
    CustomString {
      "value": "foo",
    },
  ],
}
`;

exports[`interpreter default scripts print.src 1`] = `
CustomNumber {
  "value": 123,
}
`;

exports[`interpreter default scripts simple-object.src 1`] = `
CustomString {
  "value": "was",
}
`;

exports[`interpreter default scripts simple-object.src 2`] = `null`;

exports[`interpreter default scripts slice.src 1`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomString {
      "value": "blahh",
    },
    CustomString {
      "value": "blahh",
    },
    CustomString {
      "value": "blahh",
    },
    CustomString {
      "value": "blahh",
    },
    CustomString {
      "value": "blahh",
    },
    CustomString {
      "value": "blahh",
    },
    CustomString {
      "value": "gad",
    },
  ],
}
`;

exports[`interpreter default scripts unary.src 1`] = `true`;

exports[`interpreter default scripts unary.src 2`] = `null`;

exports[`interpreter default scripts unary.src 3`] = `true`;

exports[`interpreter default scripts unary.src 4`] = `true`;

exports[`interpreter default scripts unary.src 5`] = `
CustomNumber {
  "value": 1,
}
`;

exports[`interpreter default scripts unary.src 6`] = `
CustomNumber {
  "value": -3,
}
`;
